--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@iconify/react": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.27.6",
     "axios": "^1.4.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
