--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
           
       - name: 📦 Install dependencies
-        run: npm ci
+        run: npm install
         
       - name: 🔧 Create .env file
         run: |
