--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "22.x"
   },
   "eslintConfig": {
     "extends": [
