--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.17.1",
     "antd": "^5.27.6",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.19",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
