--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.19",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "lunar-javascript": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
